--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --ui tdd test/tests.js"
+    "test": "jshint src && mocha --ui tdd test/tests.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
     "url": "https://github.com/jugglinmike/datamap/issues"
   },
   "devDependencies": {
-    "mocha": "~1.14.0"
+    "mocha": "~1.14.0",
+    "jshint": "~2.3.0"
   },
   "testling": {
     "scripts": [
